# anyimage

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  anyimage.py  image_notebook.py  mkdocs.yml  pyproject.toml  sam_notebook.py
.github/workflows/: ci.yml  docs.yml  publish.yml
anybioimage/: viewer.py
anybioimage/mixins/: image_loading.py
anyimage/: __init__.py  anyimage.py  profiling.py  utils.py  viewer.py
anyimage/mixins/: __init__.py  annotations.py  image_loading.py  mask_management.py  plate_loading.py  sam_integration.py
docs/: api.md  getting-started.md  index.md
docs/usage/: annotations.md  hcs.md  images.md  masks.md  sam.md
examples/: create_test_plate.py  image_notebook.py  plate_notebook.py
tests/: conftest.py  test_image_loading_performance.py  test_profiling.py  test_utils.py  test_utils_performance.py
