[project]
name = "anyimage"
version = "0.2.0"
description = "Interactive image viewer widget for Jupyter/marimo with annotation tools and SAM integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Maarten Paul" }
]
keywords = ["bioimage", "viewer", "widget", "anywidget", "marimo", "jupyter", "segmentation", "SAM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "anywidget>=0.9.0",
    "traitlets>=5.0.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
sam = [
    "ultralytics>=8.0.0",
]
contours = [
    "scipy>=1.7.0",
]
bioio = [
    "bioio>=1.0.0",
    "bioio-tifffile>=1.0.0",
]
dev = [
    "marimo>=0.19.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1a0",
]
all = [
    "anyimage[contours,bioio,dev]",
]
complete = [
    "anyimage[sam,contours,bioio,dev]",
]

[project.urls]
Homepage = "https://github.com/maartenpaul/anyimage"
Repository = "https://github.com/maartenpaul/anyimage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anyimage"]

[tool.hatch.build.targets.sdist]
include = [
    "anyimage/",
    "README.md",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "marimo>=0.19.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
